@@ -1,5 +1,5 @@
 ---
-typora-root-url: ../../
+
 ---
 
 # Safepoint
@@ -375,7 +375,7 @@ void VMThread::inner_execute(VM_Operation* op) {
 
 
 
-### 标记所有线程， Global Safepoint 开始
+### Arm Safepoint - 标记所有线程， Global Safepoint 开始
 
 `VM Thread` 线程在收到 safepoint request 后，修改一个 JVM 全局的 `safepoint flag `为 true（这个 flag 可以是操作系统的内存页权限标识） 。
 
@@ -547,36 +547,6 @@ inline void SafepointMechanism::ThreadData::set_polling_page(uintptr_t poll_valu
 
 
 
-- 对于 绿色 `immutable thread state` 状态的 JavaThread:  
-
-  `vm thread`  通过 `arm` Java 线程的 polling page，这实际上在 arm safepoint 期间阻止了线程从所有绿色 `immutable thread state` 中唤醒/返回后，转换到任何红色 unsafe `mutable thread state` 。见 [src/hotspot/share/utilities/globalDefinitions.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/utilities/globalDefinitions.hpp#L1030)：
-
-  ```c++
-  // Each state has an associated xxxx_trans state, which is an intermediate state used when a thread is in
-  // a transition from one state to another. These extra states makes it possible for the safepoint code to
-  // handle certain thread_states without having to suspend the thread - making the safepoint code faster.
-  ```
-
-  
-
-![HotSpot JVM Deep Dive - Safepoint 19-43 screenshot](./safepoint.assets/disable-to-mutable-thread-state-by-sp-check.png)
-
-*图: 当 JavaThread  被`arm`  polling page 后的状态机变化 。Source: [HotSpot JVM Deep Dive - Safepoint](https://youtu.be/JkbWPPNc4SI?si=c5YYAKHYBPROZAZ_&t=576)*
-
-
-
-- 对于 红色 `mutable thread state` 状态的 JavaThread: 
-
-  `vm thread`  通过 `arm` Java 线程的 polling page， 触发 Java 线程从 `mutable thread state` 转换为 `immutable thread state` 状态。并且作为此转换的结果，线程本地 GC 树被同步到 JavaThread 对象。
-
-  对于 `VM state` 的线程，这意味着需要等待线程自行完成转换。`VM state` 中只有少数几个地方显式执行安全点检查。例如，在争夺 `VM mutex 互斥锁`或 `VM monitor` 时。此设计的前提是 Java 线程应尽可能少地处于 `VM state`。但对于在 `state java`  下运行的线程，情况有所不同。
-
-  
-
-
-
-
-
 ### 等待应用线程到达 Safepoint
 
 然后这个  `VM Thread`   就开始等待其它应用线程（App thread） 到达（进入） safepoint 。
@@ -607,9 +577,69 @@ int SafepointSynchronize::synchronize_threads(jlong safepoint_limit_time, int no
 
 
 
-### 应用线程陷入 Safepoint
+### Polling Safepoint and Reach Safepoint - 应用线程 polling 并陷入 Safepoint
 
 其它应用线程（App thread）其实会高频检查这个 safepoint flag(safepoint check/polling) ，当发现为 true（arm) 时，就到达（进入） safepoint 状态。
+
+
+
+
+
+- 对于 绿色 `immutable thread state` 状态的 JavaThread:  
+
+  `vm thread`  通过 `arm` Java 线程的 polling page，这实际上在 arm safepoint 期间阻止了线程从所有绿色 `immutable thread state` 中唤醒/返回后，转换到任何红色 unsafe `mutable thread state` 。见 [src/hotspot/share/utilities/globalDefinitions.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/utilities/globalDefinitions.hpp#L1030)：
+
+  ```c++
+  // Each state has an associated xxxx_trans state, which is an intermediate state used when a thread is in
+  // a transition from one state to another. These extra states makes it possible for the safepoint code to
+  // handle certain thread_states without having to suspend the thread - making the safepoint code faster.
+  ```
+
+  
+
+![HotSpot JVM Deep Dive - Safepoint 19-43 screenshot](./safepoint.assets/disable-to-mutable-thread-state-by-sp-check.png)
+
+*图: 当 JavaThread  被`arm`  polling page 后的状态机变化 。Source: [HotSpot JVM Deep Dive - Safepoint](https://youtu.be/JkbWPPNc4SI?si=c5YYAKHYBPROZAZ_&t=576)*
+
+
+
+- 对于 红色 `mutable thread state` 状态的 JavaThread: 
+
+  `vm thread`  通过 `arm` Java 线程的 polling page， 触发 Java 线程从 `mutable thread state` 转换为 `immutable thread state` 状态。并且作为此转换的结果，线程本地 GC 树被同步到 JavaThread 对象。
+
+  对于 `VM state` 的线程，这意味着需要等待线程自行完成转换。`VM state` 中只有少数几个地方显式执行安全点检查。例如，在争夺 `VM mutex 互斥锁`或 `VM monitor` 时。此设计的前提是 Java 线程应尽可能少地处于 `VM state`。但对于在 `state java`  下运行的线程，情况有所不同。
+
+  
+
+
+
+下图举一个例子，尝试说明在几种状态和操作系统调度环境下，线程到达 Safepoint (GetStackTrace 需要 Stop The World) 的情况。
+
+
+
+![SafepointOverheads.png](./safepoint.assets/SafepointOverheads.png)
+
+*图:  几种状态和系统调度环境下，线程到达 Safepoint 的情况. Source: [Safepoints: Meaning, Side Effects and Overheads - psy-lob-saw.blogspot.com](https://psy-lob-saw.blogspot.com/2015/12/safepoints.html)*
+
+
+
+- 绿色箭头：java state thread and running CPU
+- 黄色箭头：java state thread and off CPU (因 CPU 资源不足等原因)
+- 红色箭头：JNI state thread
+
+
+
+从 VMThread arm safepoint 到 应用线程 Reach Safepoint 的延迟，叫 `Time To Safe Point(TTSP)` ：
+
+每个线程在遇到安全点轮询时都会进入安全点。但到达安全点轮询需要执行未知数量的指令。上图中，我们可以看到：
+
+- J1 直接命中安全点轮询并被暂停。J2 和 J3 正在争夺可用的 CPU 时间。J3 抢占了一些 CPU 时间，将 J2 推入运行队列，但 J2 并未进入安全点。J3 到达安全点并暂停，从而腾出内核，让 J2 取得足够的进展，进入安全点轮询。
+
+- J4 和 J5 在执行 JNI 代码(`JNI state`)时属于`Immutable thread state`，它们不受 Safepoint 挂起影响。请注意，J5 在 Stop The World 执行到一半时试图离开 JNI，并在恢复执行 Java 代码前被暂停。重要的是，我们观察到不同线程到达安全点的时间各不相同，有些线程暂停的时间比其他线程长，Java 线程花很长时间到达安全点可能会耽误其他线程。
+
+
+
+`-XX:+PrintGCApplicationStoppedTime` 可以打印出 TTSP 。
 
 
 
